[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/sprites16x45.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Goodies/Goodies.gd" type="Script" id=2]
[ext_resource path="res://addons/kenney_interface_sounds/maximize_008.wav" type="AudioStream" id=3]
[ext_resource path="res://addons/kenney_interface_sounds/confirmation_004.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/sprites720p.png" type="Texture" id=5]
[ext_resource path="res://addons/kenney_interface_sounds/confirmation_002.wav" type="AudioStream" id=6]
[ext_resource path="res://img/32/2623.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 112, 704, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 224, 1408, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 416, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 288, 1344, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 496, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 496, 112, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), ExtResource( 7 ), SubResource( 10 ) ],
"loop": true,
"name": "goodies",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 2 ), null, SubResource( 11 ), null, SubResource( 12 ), null, null, null, null, null ],
"loop": false,
"name": "hit",
"speed": 10.0
} ]

[node name="Bullet" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Bullet" type="AnimatedSprite" parent="."]
modulate = Color( 1.17647, 1.17647, 1.17647, 1 )
frames = SubResource( 13 )
animation = "goodies"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -20.222
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -13.315

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Bullet" to="." method="_on_bullet_animation_finished"]
